bug fixes= div overlapping

--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ a:hover{
  section{
     padding-top: 4vh;
     height: 96vh;
-    margin: 0 10rem;
+    margin: 0 10rem ;
     box-sizing: border-box;
     min-height: fit-content;
 
@@ -278,7 +278,7 @@ a:hover{
 
 .about-container, .about-detail-container{
     display: flex;
-    flex-wrap: wrap;
+    
 }
 
 .about-pic {
@@ -329,6 +329,7 @@ a:hover{
     display: flex;
     justify-content: center;
     flex-direction: column;
+    flex-wrap: wrap;
     
 }
 
@@ -385,8 +386,8 @@ article .icon{
     display: flex;
     justify-content: center;
     flex-direction: column;
-    height: 70vh;
-    overflow: visible;
+    height: 50vh;
+    
 
  }
 
@@ -394,7 +395,7 @@ article .icon{
     display: flex;
     justify-content: center;
     border-radius: 2rem;
-    border: rgb(53,53,53) 0.1 soild;
+    border: rgb(53,53,53) 0.1rem soild;
     border-color: rgb(163,163,163);
     background-color: rgb(250,250,250);
     margin: 2rem;
